🤾🏿‍♀️ Fix Layout Issue (#1155)
Fix Layout Issue

--- a/frontend/src/components/css/Messages.scss
+++ b/frontend/src/components/css/Messages.scss
@@ -6,6 +6,7 @@
   margin-left: auto;
   margin-right: auto;
   max-height: 100%;
+  overflow: hidden;
   // height: calc(100% - 50px);
 }
 
@@ -124,6 +125,7 @@
   flex: 1;
   padding: 12px;
   max-height: calc(100vh - #{($nav-header-height + $footer-gap)} - 90px);
+  min-height: calc(100vh - #{($nav-header-height + $footer-gap)} - 90px);
 }
 .group-conversation-content {
   max-height: calc(100vh - #{($nav-header-height + $footer-gap)});
